Change title, tweak settings

--- a/slime-simulation/src/html/index.html
+++ b/slime-simulation/src/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>three</title>
+    <title>Physarum Network Optimizer</title>
     <style>
       html,
       body {
